refactor: добавить элемент section блока page

--- a/index.html
+++ b/index.html
@@ -8,11 +8,11 @@
   </head>
   <body class="page">
 
-    <header class="header section">
+    <header class="header page__section">
       <img src="./images/logo/logo.svg" alt="логотип" class="logo">
     </header>
 
-    <main class="content section">
+    <main class="content page__section">
       <section class="profile">
         <img src="./images/header/cousteau.png" alt="Жак-Ив Кусто" class="profile__avatar">
         <div class="profile__infro">
@@ -85,7 +85,7 @@
       </section>
     </main>
 
-    <footer class="footer section">
+    <footer class="footer page__section">
       <div class="footer__copyright">&copy; Mesto Russia</div>
     </footer>
 
