--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body class="page">
 
-    <header class="header page__section">
+    <header class="header">
       <img src="./images/logo/logo.svg" alt="логотип" class="logo">
     </header>
 
