--- a/index.html
+++ b/index.html
@@ -14,13 +14,13 @@
 
     <main class="content page__section">
       <section class="profile">
-        <img src="./images/header/cousteau.png" alt="Жак-Ив Кусто" class="profile__avatar">
-        <div class="profile__infro">
+        <article class="profile__info">
+          <img src="./images/header/cousteau.png" alt="Жак-Ив Кусто" class="profile__photo">
           <h2 class="profile__name">Жак-Ив Кусто</h2>
           <p class="profile__profesion">Исследователь океана</p>
-          <button type="button" class="button profile__button profile__button_edit"><img src="./images/icons/pencil.svg" alt="редактировать" class="button__image"></button>
-        </div>
-        <button type="button" class="button profile__button profile__button_add">+</button>
+          <button type="button" class="button profile__button profile__button_type_edit"></button>
+        </article>
+        <button type="button" class="button profile__button profile__button_type_add"></button>
       </section>
 
       <section class="card-list">
