feat: добавть блок card и все его элементы

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <main class="content page__section">
       <section class="profile">
         <article class="profile__info">
-          <img src="./images/header/cousteau.png" alt="Жак-Ив Кусто" class="profile__photo">
+          <img src="./images/profile/cousteau.png" alt="Жак-Ив Кусто" class="profile__photo">
           <h2 class="profile__name">Жак-Ив Кусто</h2>
           <p class="profile__profesion">Исследователь океана</p>
           <button type="button" class="button profile__button profile__button_type_edit"></button>
@@ -29,48 +29,48 @@
           <figure class="card__figure">
             <img src="./images/card-list/karachayevsk.png" alt="Карачаевск" class="card__image">
             <figcaption class="card__description">Карачаевск</figcaption>
+            <button type="button" class="button card__button card__button_type_like"></button>
           </figure>
-          <button type="button" class="button card__buton card__buton_like"><img src="./images/icons/like_disabled.svg" alt="понравилось" class="button__image"></button>
         </article>
 
         <article class="card">
           <figure class="card__figure">
             <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
             <figcaption class="card__description">Гора Эльбрус</figcaption>
+            <button type="button" class="button card__button card__button_type_like"></button>
           </figure>
-          <button type="button" class="button card__buton card__buton_like"><img src="./images/icons/like_disabled.svg" alt="понравилось" class="button__image"></button>
         </article>
 
         <article class="card">
           <figure class="card__figure">
             <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
             <figcaption class="card__description">Домбай</figcaption>
+            <button type="button" class="button card__button card__button_type_like"></button>
           </figure>
-          <button type="button" class="button card__buton card__buton_like"><img src="./images/icons/like_disabled.svg" alt="понравилось" class="button__image"></button>
         </article>
 
         <article class="card">
           <figure class="card__figure">
             <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
             <figcaption class="card__description">Гора Эльбрус</figcaption>
+            <button type="button" class="button card__button card__button_type_like"></button>
           </figure>
-          <button type="button" class="button card__buton card__buton_like"><img src="./images/icons/like_disabled.svg" alt="понравилось" class="button__image"></button>
         </article>
 
         <article class="card">
           <figure class="card__figure">
             <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
             <figcaption class="card__description">Домбай</figcaption>
+            <button type="button" class="button card__button card__button_type_like"></button>
           </figure>
-          <button type="button" class="button card__buton card__buton_like"><img src="./images/icons/like_disabled.svg" alt="понравилось" class="button__image"></button>
         </article>
 
         <article class="card">
           <figure class="card__figure">
             <img src="./images/card-list/karachayevsk.png" alt="Карачаево-Черкесия" class="card__image">
             <figcaption class="card__description">Карачаево-Черкесия</figcaption>
+            <button type="button" class="button card__button card__button_type_like"></button>
           </figure>
-          <button type="button" class="button card__buton card__buton_like"><img src="./images/icons/like_disabled.svg" alt="понравилось" class="button__image"></button>
         </article>
       </section>
 
