feat: добавить стили для блока popup и его элементов

--- a/index.html
+++ b/index.html
@@ -74,13 +74,13 @@
         </article>
       </section>
 
-      <section class="popup popup_edit">
+      <section class="popup popup_type_edit">
         <form action="#" method="POST" class="popup__container">
           <h3 class="popup__title">Редактировать профиль</h3>
-          <input type="text" class="popup__name" placeholder="Имя">
-          <input type="text" class="popup__about" placeholder="О себе">
-          <button type="submit" class="button popup__submit">Сохранить</button>
-          <button type="reset" class="button popup__close"><img src="./images/icons/сlose.svg" alt="закрыть форму" class="button__image"></button>
+          <input type="text" class="popup__input" placeholder="Имя">
+          <input type="text" class="popup__input" placeholder="О себе">
+          <button type="submit" class="button popup__button_type_submit">Сохранить</button>
+          <button type="reset" class="button popup__button_type_close"></button>
         </form>
       </section>
     </main>
