fix: исправить ошибки со возженностью селекторов popup__button по БЭМ

--- a/index.html
+++ b/index.html
@@ -79,8 +79,8 @@
           <h3 class="popup__title">Редактировать профиль</h3>
           <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" value="">
           <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" value="">
-          <button type="submit" class="button popup__button_type_submit">Сохранить</button>
-          <button type="reset" class="button popup__button_type_close"></button>
+          <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
+          <button type="reset" class="button popup__button popup__button_type_close"></button>
         </form>
       </section>
     </main>
