--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Mesto Russia</title>
+    <title>Место Россия</title>
     <link rel="stylesheet" href="./pages/index.css">
   </head>
   <body class="page">
@@ -14,79 +14,69 @@
 
     <main class="content page__section">
       <section class="profile">
-        <article class="profile__info">
+        <div class="profile__info">
           <img src="./images/profile/cousteau.png" alt="Жак-Ив Кусто" class="profile__photo">
-          <h2 class="profile__name">Жак-Ив Кусто</h2>
+          <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__about">Исследователь океана</p>
           <button type="button" class="button profile__button profile__button_type_edit"></button>
-        </article>
+        </div>
         <button type="button" class="button profile__button profile__button_type_add"></button>
       </section>
 
       <section class="card-list">
 
         <article class="card">
-          <figure class="card__figure">
-            <img src="./images/card-list/karachayevsk.png" alt="Карачаевск" class="card__image">
-            <figcaption class="card__description">Карачаевск</figcaption>
-            <button type="button" class="button card__button card__button_type_like"></button>
-          </figure>
+          <img src="./images/card-list/karachayevsk.png" alt="Карачаевск" class="card__image">
+          <h2 class="card__description">Карачаевск</h2>
+          <button type="button" class="button card__button card__button_type_like"></button>
         </article>
 
         <article class="card">
-          <figure class="card__figure">
-            <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
-            <figcaption class="card__description">Гора Эльбрус</figcaption>
-            <button type="button" class="button card__button card__button_type_like"></button>
-          </figure>
+          <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
+          <h2 class="card__description">Гора Эльбрус</h2>
+          <button type="button" class="button card__button card__button_type_like"></button>
         </article>
 
         <article class="card">
-          <figure class="card__figure">
-            <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
-            <figcaption class="card__description">Домбай</figcaption>
-            <button type="button" class="button card__button card__button_type_like"></button>
-          </figure>
+          <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
+          <h2 class="card__description">Домбай</h2>
+          <button type="button" class="button card__button card__button_type_like"></button>
         </article>
 
         <article class="card">
-          <figure class="card__figure">
-            <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
-            <figcaption class="card__description">Гора Эльбрус</figcaption>
-            <button type="button" class="button card__button card__button_type_like"></button>
-          </figure>
+          <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
+          <h2 class="card__description">Гора Эльбрус</h2>
+          <button type="button" class="button card__button card__button_type_like"></button>
         </article>
 
         <article class="card">
-          <figure class="card__figure">
-            <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
-            <figcaption class="card__description">Домбай</figcaption>
-            <button type="button" class="button card__button card__button_type_like"></button>
-          </figure>
+          <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
+          <h2 class="card__description">Домбай</h2>
+          <button type="button" class="button card__button card__button_type_like"></button>
         </article>
 
         <article class="card">
-          <figure class="card__figure">
-            <img src="./images/card-list/karachayevsk.png" alt="Карачаево-Черкесия" class="card__image">
-            <figcaption class="card__description">Карачаево-Черкесия</figcaption>
-            <button type="button" class="button card__button card__button_type_like"></button>
-          </figure>
+          <img src="./images/card-list/karachayevsk.png" alt="Карачаево-Черкесия" class="card__image">
+          <h2 class="card__description">Карачаево-Черкесия</h2>
+          <button type="button" class="button card__button card__button_type_like"></button>
         </article>
       </section>
 
-      <section class="popup popup_type_edit">
-        <form action="#" class="popup__container">
-          <h3 class="popup__title">Редактировать профиль</h3>
-          <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" value="">
-          <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" value="">
-          <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
-          <button type="reset" class="button popup__button popup__button_type_close"></button>
-        </form>
+      <section class="popup">
+        <div class="popup__container">
+          <h2 class="popup__title">Редактировать профиль</h2>
+          <form action="#" class="popup__form" name="edit">
+            <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="">
+            <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="">
+            <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
+            <button type="reset" class="button popup__button popup__button_type_close"></button>
+          </form>
+        </div>
       </section>
     </main>
 
     <footer class="footer page__section">
-      <div class="footer__copyright">&copy; Mesto Russia</div>
+      <p class="footer__copyright">&copy; Mesto Russia</p>
     </footer>
 
     <script src="./script.js"></script>
