fix: исправить заменчания по стилям css

--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
       <section class="card-list">
 
         <article class="card">
-          <img src="./images/card-list/karachayevsk.png" alt="Карачаевск" class="card__image">
-          <h2 class="card__description">Карачаевск</h2>
+          <img src="./images/card-list/burcin-ergunt-3AUjiNe1KcQ-unsplash.jpg" alt="Мастерская" class="card__image">
+          <h2 class="card__description">Мастерская</h2>
           <button type="button" class="button card__button card__button_type_like"></button>
         </article>
 
