--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
           <img src="./images/profile/cousteau.png" alt="Жак-Ив Кусто" class="profile__photo">
           <h1 class="profile__name">Жак-Ив Кусто</h1>
           <p class="profile__about">Исследователь океана</p>
-          <button type="button" class="button profile__button profile__button_type_edit"></button>
+          <button type="button" class="button profile__button profile__button_type_edit" aria-label="редактировать профиль"></button>
         </div>
-        <button type="button" class="button profile__button profile__button_type_add"></button>
+        <button type="button" class="button profile__button profile__button_type_add" aria-label="добавить новое фото"></button>
       </section>
 
       <section class="card-list">
@@ -28,37 +28,37 @@
         <article class="card">
           <img src="./images/card-list/burcin-ergunt-3AUjiNe1KcQ-unsplash.jpg" alt="Мастерская" class="card__image">
           <h2 class="card__description">Мастерская</h2>
-          <button type="button" class="button card__button card__button_type_like"></button>
+          <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
         </article>
 
         <article class="card">
           <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
           <h2 class="card__description">Гора Эльбрус</h2>
-          <button type="button" class="button card__button card__button_type_like"></button>
+          <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
         </article>
 
         <article class="card">
           <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
           <h2 class="card__description">Домбай</h2>
-          <button type="button" class="button card__button card__button_type_like"></button>
+          <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
         </article>
 
         <article class="card">
           <img src="./images/card-list/mount-elbrus.png" alt="Гора Эльбрус" class="card__image">
           <h2 class="card__description">Гора Эльбрус</h2>
-          <button type="button" class="button card__button card__button_type_like"></button>
+          <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
         </article>
 
         <article class="card">
           <img src="./images/card-list/dombai.png" alt="Домбай" class="card__image">
           <h2 class="card__description">Домбай</h2>
-          <button type="button" class="button card__button card__button_type_like"></button>
+          <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
         </article>
 
         <article class="card">
           <img src="./images/card-list/karachayevsk.png" alt="Карачаево-Черкесия" class="card__image">
           <h2 class="card__description">Карачаево-Черкесия</h2>
-          <button type="button" class="button card__button card__button_type_like"></button>
+          <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
         </article>
       </section>
 
@@ -69,7 +69,7 @@
             <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="">
             <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="">
             <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
-            <button type="reset" class="button popup__button popup__button_type_close"></button>
+            <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
           </form>
         </div>
       </section>
