--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
       <section class="popup">
         <div class="popup__container">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form action="#" class="popup__form" name="edit">
+          <form action="#" class="popup__form popup__form_type_edit" name="edit">
             <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="">
             <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="">
             <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
