--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
       <section class="profile">
         <div class="profile__info">
           <img src="./images/profile/cousteau.png" alt="Жак-Ив Кусто" class="profile__photo">
-          <h1 class="profile__name">Жак-Ив Кусто</h1>
-          <p class="profile__about">Исследователь океана</p>
+          <h1 class="profile__name">Жак-Ив Кусто длинная строка что бы появился скрол вот тут</h1>
+          <p class="profile__about">Исследователь океана длинная строка что бы появился скрол вот тут длинная строка что бы появился скрол вот тут</p>
           <button type="button" class="button profile__button profile__button_type_edit" aria-label="редактировать профиль"></button>
         </div>
         <button type="button" class="button profile__button profile__button_type_add" aria-label="добавить новое фото"></button>
