--- a/index.html
+++ b/index.html
@@ -23,21 +23,34 @@
         <button type="button" class="button profile__button profile__button_type_add" aria-label="добавить новое фото"></button>
       </section>
 
-      <section class="card-list">
+      <section class="card-list"></section>
 
-      </section>
 
-      <section class="popup">
-        <div class="popup__container">
+      <section class="popup popup_type_edit">
+        <div class="popup__container popup__container_type_form">
           <h2 class="popup__title">Редактировать профиль</h2>
-          <form action="#" class="popup__form popup__form_type_edit" name="edit">
-            <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="">
-            <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="">
-            <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
-            <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+          <form action="#" class="popup__form form form__type_edit" name="edit">
+            <input type="text" class="form__input form__input_type_name" placeholder="Имя" name="name" value="" autocomplete="off">
+            <input type="text" class="form__input form__input_type_about" placeholder="О себе" name="about" value="" autocomplete="off">
+            <button type="submit" class="button form__button form__button_type_submit">Сохранить</button>
+            <button type="reset" class="button form__button form__button_type_close" aria-label="закрыть"></button>
           </form>
         </div>
       </section>
+
+
+      <section class="popup popup_type_add">
+        <div class="popup__container popup__container_type_form">
+          <h2 class="popup__title">Новое место</h2>
+          <form action="#" class="popup__form form form__type_add" name="add">
+            <input type="text" class="form__input form__input_type_name" placeholder="Название" name="name" value="" autocomplete="off" required>
+            <input type="text" class="form__input form__input_type_link" placeholder="Ссылка на картинку" name="link" value="" autocomplete="off" required>
+            <button type="submit" class="button form__button form__button_type_submit">Создать</button>
+            <button type="reset" class="button form__button form__button_type_close" aria-label="закрыть"></button>
+          </form>
+        </div>
+      </section>
+
     </main>
 
     <footer class="footer page__section">
@@ -51,6 +64,7 @@
         <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
       </article>
     </template>
+
     <template id="plug">
       <article class="plug">
         <h2 class="plug__title">&#128521</h2>
