--- a/index.html
+++ b/index.html
@@ -61,7 +61,8 @@
       <article class="card">
         <img src="./images/card-list/pattern.jpg" alt="название картинки" class="card__image">
         <h2 class="card__description">название картинки</h2>
-        <button type="button" class="button card__button card__button_type_like" aria-label="нравиться"></button>
+        <button type="button" class="button card__button card__button_type_like" aria-label="нравится"></button>
+        <button type="button" class="button card__button card__button_type_delete" aria-label="удалить"></button>
       </article>
     </template>
 
