--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
           <h2 class="popup__title">Новое место</h2>
           <form action="#" class="popup__form popup__form_type_add" name="add">
             <input type="text" class="popup__input popup__input_type_name" placeholder="Название" name="name" value="" autocomplete="off" required>
-            <input type="text" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" name="link" value="" autocomplete="off" required>
+            <input type="url" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" name="link" value="" autocomplete="off" required>
             <button type="submit" class="button popup__button popup__button_type_submit">Создать</button>
             <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
           </form>
