--- a/index.html
+++ b/index.html
@@ -25,40 +25,6 @@
 
       <section class="card-list"></section>
 
-
-      <section class="popup popup_type_edit">
-        <div class="popup__container popup__container_type_form">
-          <h2 class="popup__title">Редактировать профиль</h2>
-          <form action="#" class="popup__form  popup__form_type_edit" name="edit">
-            <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="" autocomplete="off">
-            <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="" autocomplete="off">
-            <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
-            <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
-          </form>
-        </div>
-      </section>
-
-
-      <section class="popup popup_type_add">
-        <div class="popup__container popup__container_type_form">
-          <h2 class="popup__title">Новое место</h2>
-          <form action="#" class="popup__form popup__form_type_add" name="add">
-            <input type="text" class="popup__input popup__input_type_name" placeholder="Название" name="name" value="" autocomplete="off" required>
-            <input type="url" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" name="link" value="" autocomplete="off" required>
-            <button type="submit" class="button popup__button popup__button_type_submit">Создать</button>
-            <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
-          </form>
-        </div>
-      </section>
-
-      <section class="popup popup_type_image">
-        <div class="popup__container popup__container_type_image">
-          <img src="./images/card-list/karachayevsk.png" alt="название картинки" class="popup__image">
-          <h3 class="popup__image-description">Карачаево-Черкессия</h3>
-          <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
-        </div>
-      </section>
-
     </main>
 
     <footer class="footer page__section">
@@ -74,14 +40,40 @@
       </article>
     </template>
 
-    <template id="plug">
-      <article class="plug">
-        <h2 class="plug__title">&#128521</h2>
-        <p class="plug__text">обновите страницу и я все починю</p>
-      </article>
-    </template>
+    <section class="popup popup_type_edit">
+      <div class="popup__container popup__container_type_form">
+        <h2 class="popup__title">Редактировать профиль</h2>
+        <form action="#" class="popup__form  popup__form_type_edit" name="edit">
+          <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="" autocomplete="off">
+          <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="" autocomplete="off">
+          <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
+          <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+        </form>
+      </div>
+    </section>
 
-    <script src="./script.js"></script>
+    <section class="popup popup_type_add">
+      <div class="popup__container popup__container_type_form">
+        <h2 class="popup__title">Новое место</h2>
+        <form action="#" class="popup__form popup__form_type_add" name="add">
+          <input type="text" class="popup__input popup__input_type_title" placeholder="Название" name="title" autocomplete="off" required>
+          <input type="url" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" name="link" autocomplete="off" required>
+          <button type="submit" class="button popup__button popup__button_type_submit">Создать</button>
+          <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+        </form>
+      </div>
+    </section>
+
+    <section class="popup popup_type_image">
+      <div class="popup__container popup__container_type_image">
+        <img src="" alt="" class="">
+        <h3 class="popup__image-description">Карачаево-Черкессия</h3>
+        <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+      </div>
+    </section>
+
+    <script src="./scripts/cards.js"></script>
+    <script src="./scripts/index.js"></script>
 
   </body>
 </html>
