refactor: исправить работу открытия попапа с картинкой

--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
     <section class="popup popup_type_image">
       <div class="popup__container popup__container_type_image">
-        <img src="" alt="" class="">
+        <img src="./images/card-list/pattern.jpg" alt="pattern" class="popup__image">
         <h3 class="popup__image-description">Карачаево-Черкессия</h3>
         <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
       </div>
