--- a/index.html
+++ b/index.html
@@ -43,11 +43,19 @@
     <section class="popup popup_type_edit">
       <div class="popup__container popup__container_type_form">
         <h2 class="popup__title">Редактировать профиль</h2>
-        <form action="#" class="popup__form  popup__form_type_edit" name="edit">
-          <input type="text" class="popup__input popup__input_type_name" placeholder="Имя" name="name" value="" autocomplete="off">
-          <input type="text" class="popup__input popup__input_type_about" placeholder="О себе" name="about" value="" autocomplete="off">
-          <button type="submit" class="button popup__button popup__button_type_submit">Сохранить</button>
-          <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+        <form action="#" class="form popup__form" name="edit">
+          <fieldset class="form__set">
+            <label class="form__field">
+              <input type="text" class="form__input" id="name-input" placeholder="Имя" name="name" value="" autocomplete="off">
+              <span class="form__placeholder name-input-placeholder"></span>
+            </label>
+            <label class="form__field">
+              <input type="text" class="form__input" id="about" placeholder="О себе" name="about" value="" autocomplete="off">
+              <span class="form__placeholder about-input-placeholder"></span>
+            </label>
+            <button type="submit" class="button form__button form__button_type_submit">Сохранить</button>
+            <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+          </fieldset>
         </form>
       </div>
     </section>
@@ -55,11 +63,19 @@
     <section class="popup popup_type_add">
       <div class="popup__container popup__container_type_form">
         <h2 class="popup__title">Новое место</h2>
-        <form action="#" class="popup__form popup__form_type_add" name="add">
-          <input type="text" class="popup__input popup__input_type_title" placeholder="Название" name="title" autocomplete="off" required>
-          <input type="url" class="popup__input popup__input_type_link" placeholder="Ссылка на картинку" name="link" autocomplete="off" required>
-          <button type="submit" class="button popup__button popup__button_type_submit">Создать</button>
-          <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+        <form action="#" class="form popup__form" name="add">
+          <fieldset class="form__set">
+            <label class="form__field">
+              <input type="text" class="form__input" id="title-input" placeholder="Название" name="title" autocomplete="off" required>
+              <span class="form__placeholder title-input-placeholder"></span>
+            </label>
+            <label class="form__field">
+              <input type="url" class="form__input" id="link-input" placeholder="Ссылка на картинку" name="link" autocomplete="off" required>
+              <span class="form__placeholder link-input-placeholder"></span>
+            </label>
+            <button type="submit" class="button form__button form__button_type_submit">Создать</button>
+            <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
+          </fieldset>
         </form>
       </div>
     </section>
