--- a/index.html
+++ b/index.html
@@ -40,17 +40,17 @@
       </article>
     </template>
 
-    <section class="popup popup_type_edit">
+    <section class="popup popup_type_edit" novalidate>
       <div class="popup__container popup__container_type_form">
         <h2 class="popup__title">Редактировать профиль</h2>
         <form action="#" class="form popup__form" name="edit">
           <fieldset class="form__set">
             <label class="form__field">
-              <input type="text" class="form__input" id="name-input" placeholder="Имя" name="name" value="" autocomplete="off">
+              <input type="text" class="form__input form__input_type_name" id="name-input" placeholder="Имя" name="name" value="" autocomplete="off" required minlength="2" maxlength="40">
               <span class="form__placeholder name-input-placeholder"></span>
             </label>
             <label class="form__field">
-              <input type="text" class="form__input" id="about" placeholder="О себе" name="about" value="" autocomplete="off">
+              <input type="text" class="form__input form__input_type_about" id="about" placeholder="О себе" name="about" value="" autocomplete="off" required minlength="2" maxlength="200">
               <span class="form__placeholder about-input-placeholder"></span>
             </label>
             <button type="submit" class="button form__button form__button_type_submit">Сохранить</button>
@@ -60,17 +60,17 @@
       </div>
     </section>
 
-    <section class="popup popup_type_add">
+    <section class="popup popup_type_add" novalidate>
       <div class="popup__container popup__container_type_form">
         <h2 class="popup__title">Новое место</h2>
         <form action="#" class="form popup__form" name="add">
           <fieldset class="form__set">
             <label class="form__field">
-              <input type="text" class="form__input" id="title-input" placeholder="Название" name="title" autocomplete="off" required>
+              <input type="text" class="form__input form__input_type_title" id="title-input" placeholder="Название" name="title" autocomplete="off" required  minlength="2" maxlength="30">
               <span class="form__placeholder title-input-placeholder"></span>
             </label>
             <label class="form__field">
-              <input type="url" class="form__input" id="link-input" placeholder="Ссылка на картинку" name="link" autocomplete="off" required>
+              <input type="url" class="form__input form__input_type_link" id="link-input" placeholder="Ссылка на картинку" name="link" autocomplete="off" required>
               <span class="form__placeholder link-input-placeholder"></span>
             </label>
             <button type="submit" class="button form__button form__button_type_submit">Создать</button>
