--- a/index.html
+++ b/index.html
@@ -47,11 +47,11 @@
           <fieldset class="form__set">
             <label class="form__field">
               <input type="text" class="form__input form__input_type_name" id="name-input" placeholder="Имя" name="name" value="" autocomplete="off" required minlength="2" maxlength="40">
-              <span class="form__placeholder name-input-placeholder"></span>
+              <span class="form__input-error name-input-error"></span>
             </label>
             <label class="form__field">
-              <input type="text" class="form__input form__input_type_about" id="about" placeholder="О себе" name="about" value="" autocomplete="off" required minlength="2" maxlength="200">
-              <span class="form__placeholder about-input-placeholder"></span>
+              <input type="text" class="form__input form__input_type_about" id="about-input" placeholder="О себе" name="about" value="" autocomplete="off" required minlength="2" maxlength="200">
+              <span class="form__input-error about-input-error"></span>
             </label>
             <button type="submit" class="button form__button form__button_type_submit">Сохранить</button>
             <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
@@ -68,13 +68,13 @@
           <fieldset class="form__set">
             <label class="form__field">
               <input type="text" class="form__input form__input_type_title" id="title-input" placeholder="Название" name="title" autocomplete="off" required  minlength="2" maxlength="30">
-              <span class="form__placeholder title-input-placeholder"></span>
+              <span class="form__input-error title-input-error"></span>
             </label>
             <label class="form__field">
               <input type="url" class="form__input form__input_type_link" id="link-input" placeholder="Ссылка на картинку" name="link" autocomplete="off" required>
-              <span class="form__placeholder link-input-placeholder"></span>
+              <span class="form__input-error link-input-error"></span>
             </label>
-            <button type="submit" class="button form__button form__button_type_submit">Создать</button>
+            <button type="submit" class="button form__button form__button_type_submit form__button_disabled" disabled>Создать</button>
             <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
           </fieldset>
         </form>
@@ -82,7 +82,7 @@
       <div class="popup__overlay"></div>
     </section>
 
-    <section class="popup popup_type_image popup_opened">
+    <section class="popup popup_type_image">
       <div class="popup__container popup__container_type_image">
         <img src="./images/card-list/pattern.jpg" alt="pattern" class="popup__image">
         <h3 class="popup__image-description">Карачаево-Черкессия</h3>
@@ -93,6 +93,7 @@
 
     <script src="./scripts/cards.js"></script>
     <script src="./scripts/index.js"></script>
+    <script src="./scripts/validation.js"></script>
 
   </body>
 </html>
