--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <template id="card">
       <article class="card">
-        <img src="./images/card-list/pattern.jpg" alt="название картинки" class="card__image">
-        <h2 class="card__description">название картинки</h2>
+        <img class="card__image" src="" alt="">
+        <h2 class="card__description"></h2>
         <button type="button" class="button card__button card__button_type_like" aria-label="нравится"></button>
         <button type="button" class="button card__button card__button_type_delete" aria-label="удалить"></button>
       </article>
