refactor: создать класс валидации и перенести код валидации в этот класс

--- a/index.html
+++ b/index.html
@@ -84,8 +84,8 @@
 
     <section class="popup popup_type_image">
       <div class="popup__container popup__container_type_image">
-        <img src="./images/card-list/pattern.jpg" alt="pattern" class="popup__image">
-        <h3 class="popup__image-description">Карачаево-Черкессия</h3>
+        <img src="" alt="" class="popup__image">
+        <h3 class="popup__image-description"></h3>
         <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
       </div>
       <div class="popup__overlay popup__overlay_type_image"></div>
