--- a/index.html
+++ b/index.html
@@ -91,9 +91,12 @@
       <div class="popup__overlay popup__overlay_type_image"></div>
     </section>
 
-    <script src="./scripts/cards.js"></script>
-    <script src="./scripts/index.js"></script>
-    <script src="./scripts/validation.js"></script>
+    <script type="module" src="./scripts/index.js"></script>
+    <script type="module" src="./scripts/cards.js"></script>
+    <script type="module" src="./scripts/validator-setting.js"></script>
+    <script type="module" src="./scripts/class/Card.js"></script>
+    <script type="module" src="./scripts/class/FormValidator.js"></script>
+
 
   </body>
 </html>
