--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 
     <template id="card">
       <article class="card">
-        <img class="card__image" src="" alt="">
-        <h2 class="card__description"></h2>
+        <img class="card__image" src="https://images.unsplash.com/photo-1569995917770-11b563e4f123?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Njl8fHBhdHRlcm5zfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="паттерн">
+        <h2 class="card__description">паттерн</h2>
         <button type="button" class="button card__button card__button_type_like" aria-label="нравится"></button>
         <button type="button" class="button card__button card__button_type_delete" aria-label="удалить"></button>
       </article>
@@ -84,8 +84,8 @@
 
     <section class="popup popup_type_image">
       <div class="popup__container popup__container_type_image">
-        <img src="" alt="" class="popup__image">
-        <h3 class="popup__image-description"></h3>
+        <img src="https://images.unsplash.com/photo-1569995917770-11b563e4f123?ixid=MnwxMjA3fDB8MHxzZWFyY2h8Njl8fHBhdHRlcm5zfGVufDB8fDB8fA%3D%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=500&q=60" alt="паттерн" class="popup__image">
+        <h3 class="popup__image-description">паттерн</h3>
         <button type="reset" class="button popup__button popup__button_type_close" aria-label="закрыть"></button>
       </div>
       <div class="popup__overlay popup__overlay_type_image"></div>
